Floor mesh refactor

--- a/index.html
+++ b/index.html
@@ -768,51 +768,55 @@
       handMeshes[i] = handMesh;
     }
 
-    (() => {
+    const floorMesh = (() => {
+      const geometry = new THREE.PlaneBufferGeometry(FLOOR_SIZE, FLOOR_SIZE)
+        .applyMatrix(new THREE.Matrix4().makeRotationFromQuaternion(
+          new THREE.Quaternion().setFromUnitVectors(
+            new THREE.Vector3(0, 0, 1),
+            new THREE.Vector3(0, 1, 0)
+          )
+        ));
+      const uvs = geometry.attributes.uv.array;
+      const numUvs = uvs.length / 2;
+      for (let i = 0; i < numUvs; i++) {
+        uvs[i * 2] *= FLOOR_SIZE / 10 * 2;
+        uvs[i * 2 + 1] *= FLOOR_SIZE / 10;
+      }
+
+      const texture = new THREE.Texture(
+        null,
+        THREE.UVMapping,
+        THREE.RepeatWrapping,
+        THREE.RepeatWrapping,
+        THREE.NearestFilter,
+        THREE.NearestFilter,
+        THREE.RGBAFormat,
+        THREE.UnsignedByteType,
+        1
+      );
+
       const graphImg = new Image();
       graphImg.crossOrigin = 'Anonymous';
       graphImg.src = 'img/graphy.png';
       graphImg.onload = () => {
-        const floorMesh = (() => {
-          const geometry = new THREE.PlaneBufferGeometry(FLOOR_SIZE, FLOOR_SIZE)
-            .applyMatrix(new THREE.Matrix4().makeRotationFromQuaternion(
-              new THREE.Quaternion().setFromUnitVectors(
-                new THREE.Vector3(0, 0, 1),
-                new THREE.Vector3(0, 1, 0)
-              )
-            ));
-          const uvs = geometry.attributes.uv.array;
-          const numUvs = uvs.length / 2;
-          for (let i = 0; i < numUvs; i++) {
-            uvs[i * 2] *= FLOOR_SIZE / 10 * 2;
-            uvs[i * 2 + 1] *= FLOOR_SIZE / 10;
-          }
+        texture.image = graphImg;
+        texture.needsUpdate = true;
 
-          const texture = new THREE.Texture(
-            graphImg,
-            THREE.UVMapping,
-            THREE.RepeatWrapping,
-            THREE.RepeatWrapping,
-            THREE.NearestFilter,
-            THREE.NearestFilter,
-            THREE.RGBAFormat,
-            THREE.UnsignedByteType,
-            1
-          );
-          texture.needsUpdate = true;
-          const material = new THREE.MeshBasicMaterial({
-            map: texture,
-            side: THREE.DoubleSide,
-          });
-          const mesh = new THREE.Mesh(geometry, material);
-          return mesh;
-        })();
-        scene.add(floorMesh);
+        mesh.visible = true;
       };
       graphImg.onerror = err => {
         console.warn(err.stack);
       };
+
+      const material = new THREE.MeshBasicMaterial({
+        map: texture,
+        side: THREE.DoubleSide,
+      });
+      const mesh = new THREE.Mesh(geometry, material);
+      mesh.visible = false;
+      return mesh;
     })();
+    scene.add(floorMesh);
 
     const _makeSkinMesh = (() => {
       const hmdEuler = new THREE.Euler();
