--- a/index.html
+++ b/index.html
@@ -151,6 +151,13 @@
     camera.projectionMatrix.toArray(fakeDisplay._frameData.leftProjectionMatrix);
     fakeDisplay.update();
     fakeDisplay.onrequestanimationframe = fn => window.requestAnimationFrame(fn, 1);
+    fakeDisplay.onvrdisplaypresentchange = () => {
+      setTimeout(() => {
+        const e = new Event('vrdisplaypresentchange');
+        e.display = fakeDisplay;
+        window.dispatchEvent(e);
+      });
+    };
     fakeDisplay.requestPresent([{source: canvas}])
       .then(() => {
         renderer.vr.setDevice(fakeDisplay);
