--- a/index.html
+++ b/index.html
@@ -1477,6 +1477,25 @@
         }
       }
     };
+    const _render = () => {
+      const device = renderer.vr.getDevice();
+      if (device && device.constructor.name === 'FakeVRDisplay') {
+        camera.position.copy(device.position);
+        camera.quaternion.copy(device.quaternion);
+
+        camera.projectionMatrix.fromArray(device._frameData.leftProjectionMatrix);
+
+        renderer.vr.enabled = false;
+        renderer.render(scene, camera, renderTarget);
+        renderer.vr.enabled = true;
+      } else {
+        renderer.render(scene, camera, renderTarget);
+      }
+
+      renderer.vr.enabled = false;
+      renderer.render(compositeScene, camera);
+      renderer.vr.enabled = true;
+    };
     function animate() {
       const currentTime = Date.now();
       const timePassed = Math.max(currentTime - lastTime, 1);
@@ -2252,34 +2271,24 @@
       _updateObjects();
       _updateMp();
 
+      if (window.requestAnimationFrame.length === 1) {
+        _render();
+      }
+
       if (!renderer.vr.getDevice()) {
         window.requestAnimationFrame(animate, 1);
       }
     }
 
-    (function recurse() {
-      window.requestAnimationFrame(() => {
-        const device = renderer.vr.getDevice();
-        if (device && device.constructor.name === 'FakeVRDisplay') {
-          camera.position.copy(device.position);
-          camera.quaternion.copy(device.quaternion);
+    if (window.requestAnimationFrame.length === 2) {
+      (function recurse() {
+        window.requestAnimationFrame(() => {
+          _render();
 
-          camera.projectionMatrix.fromArray(device._frameData.leftProjectionMatrix);
-
-          renderer.vr.enabled = false;
-          renderer.render(scene, camera, renderTarget);
-          renderer.vr.enabled = true;
-        } else {
-          renderer.render(scene, camera, renderTarget);
-        }
-
-        renderer.vr.enabled = false;
-        renderer.render(compositeScene, camera);
-        renderer.vr.enabled = true;
-
-        recurse();
-      }, -1);
-    })();
+          recurse();
+        }, -1);
+      })();
+    }
 
     const _handleDefaultKey = (code, shiftKey) => {
       let c = String.fromCharCode(code);
