--- a/index.html
+++ b/index.html
@@ -150,7 +150,11 @@
     fakeDisplay.quaternion.copy(camera.quaternion);
     camera.projectionMatrix.toArray(fakeDisplay._frameData.leftProjectionMatrix);
     fakeDisplay.update();
-    fakeDisplay.onrequestanimationframe = fn => window.tickAnimationFrame.window.requestAnimationFrame(fn, 1);
+    if (window.tickAnimationFrame) {
+      fakeDisplay.onrequestanimationframe = fn => window.tickAnimationFrame.window.requestAnimationFrame(fn, 1);
+    } else {
+      fakeDisplay.onrequestanimationframe = fn => window.requestAnimationFrame(fn, 1);
+    }
     fakeDisplay.onvrdisplaypresentchange = () => {
       setTimeout(() => {
         const e = new Event('vrdisplaypresentchange');
