Only return frame of reference in stereo mode

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
               },
               baseLayer: null,
               requestFrameOfReference() {
-                return Promise.resolve({});
+                return Promise.resolve(stereo ? {} : null);
               },
               device: fakeDisplay,
               requestAnimationFrame: fn => window.requestAnimationFrame(timestamp => {
