--- a/index.html
+++ b/index.html
@@ -2421,6 +2421,12 @@
           scene.background = null;
         } else {
           _closeUrl(iframe);
+          iframes.splice(iframes.indexOf(iframe), 1);
+
+          const index = currentApps.indexOf(iframe.src);
+          if (index !== -1) {
+            currentApps.splice(index, 1);
+          }
 
           _drawFail();
         }
@@ -2481,6 +2487,7 @@
           iframesToKeep.push(iframe);
         } else {
           _closeUrl(iframe);
+          iframes.splice(iframes.indexOf(iframe), 1);
         }
       }
       iframes = iframesToKeep;
